--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 
 <body class="body">
   <div class="page">
-
     <header class="header">
       <img class="header__logo" alt="Россия" src="./images/header-logo.svg">
       <ul class="header__links">
@@ -21,18 +20,15 @@
         <li><a class="header__lang-link" href="#">En</a></li>
       </ul>
     </header>
-
     <main class="content">
       <section class="lead">
         <h1 class="lead__title">Путешествия по России</h1>
         <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
         <figure class="lead__image-block">
-          <p class="lead__image-box"><img class="lead__image" src="./images/lead-polka.jpg"
-              alt="спальное место в поезде"></p>
+          <img class="lead__image" src="./images/lead-polka.jpg" alt="спальное место в поезде">
           <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
         </figure>
       </section>
-
       <section class="intro">
         <h2 class="intro__title">Чего мы там не видели?</h2>
         <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
@@ -42,24 +38,23 @@
           смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч
           километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
         <ul class="intro__list">
-          <li class="intro__list-cell">
-            <p class="intro__list-text">Часовых поясов 11</p>
+          <li class="intro__list-text">
+            Часовых поясов <span class="intro__list-numbers">11</span>
           </li>
-          <li class="intro__list-cell">
-            <p class="intro__list-text">Объектов природного наследия ЮНЕСКО 12</p>
+          <li class="intro__list-text">
+            Объектов природного наследия ЮНЕСКО <span class="intro__list-numbers">12</span>
           </li>
-          <li class="intro__list-cell">
-            <p class="intro__list-text">Объектов культурного наследия ЮНЕСКО 16</p>
+          <li class="intro__list-text">
+            Объектов культурного наследия ЮНЕСКО <span class="intro__list-numbers">16</span>
           </li>
-          <li class="intro__list-cell">
-            <p class="intro__list-text">Природных заповедников 105</p>
+          <li class="intro__list-text">
+            Природных заповедников <span class="intro__list-numbers">105</span>
           </li>
-          <li class="intro__list-cell">
-            <p class="intro__list-text">Аэропортов 241</p>
+          <li class="intro__list-text">
+            Аэропортов <span class="intro__list-numbers">241</span>
           </li>
         </ul>
       </section>
-
       <section class="photo-grid">
         <ul class="photo-grid__gallery">
           <li class="photo-grid__cell">
@@ -100,96 +95,107 @@
           </li>
         </ul>
       </section>
-
       <section class="place">
-        <h2 class="place__title">Куршская коса</h2>
-        <div class="place__link-area">
-          <p class="place__url-heading">URL</p>
-          <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
-        </div>
-        <img class="place__image" src="./images/place-kosa.jpg" alt="куршская коса">
-        <div class="place__text">
-          <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта
-            &mdash;
-            спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой.
-            Уникальная природная зона на краю российского анклава.</p>
-          <p class="place__paragraph">На этом Калининградская область не заканчивается. Для&nbsp;путешественника
-            и&nbsp;исследователя там же по соседству &mdash; самая западная точка России, Балтийская коса, &mdash;
-            и&nbsp;немецкое
-            наследие
-            россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие
-            природы и запах стального, прохладного моря.</p>
-        </div>
-        <h2 class="place__title">Кольский</h2>
-        <div class="place__link-area">
-          <p class="place__url-heading">URL</p>
-          <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National
-            Geographic</a>
-        </div>
-        <img class="place__image" src="./images/place-kolsky.jpg" alt="кольский полуостров">
-        <div class="place__text">
-          <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от
-            которой на юг &mdash;
-            тайга, а на север &mdash; Ледовитый океан, прикидывающийся Баренцевым морем.</p>
-          <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического
-            фестиваля
-            в Териберке. Возможно, слово &laquo;Хибины&raquo; не осталось под снегом школьных воспоминаний
-            об уроках географии.
-            Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной,
-            а&nbsp;от&nbsp;апатитов вас&nbsp;давно&nbsp;накрывает апатия. Но&nbsp;ваша мечта увидеть северное сияние
-            начинает сбываться с&nbsp;билетом
-            в Мурманск.</p>
-        </div>
-        <h2 class="place__title">Алтай</h2>
-        <div class="place__link-area">
-          <p class="place__url-heading">URL</p>
-          <a class="place__link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">YouTube</a>
-        </div>
-        <img class="place__image" src="./images/place-altai.jpg" alt="алтай">
-        <div class="place__text">
-          <p class="place__paragraph">Алтай &mdash; одно из красивейших мест в России.
-            В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные
-            реки и
-            озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом
-            здешних мест &mdash;
-            горным воздухом.</p>
-          <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы
-            увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают
-            орлы, а
-            на равнинах пасутся косули. И знаменитые манулы &mdash; тоже обитатели Алтайского края.</p>
-        </div>
-        <h2 class="place__title">Зимний Байкал</h2>
-        <div class="place__link-area">
-          <p class="place__url-heading">URL</p>
-          <a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
-        </div>
-        <img class="place__image" src="./images/place-winter-baikal.jpg" alt="зимний байкал">
-        <div class="place__text">
-          <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
-            в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в
-            России.</p>
-          <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по
-            скийорингу. Это такой вид спорта, когда лыжник привязывает себя
-            к мотоциклу, и тандем старается развить как можно б&oacute;льшую скорость на льду.
-            В марте 2019 года на
-            фестивале &laquo;Байкальская миля&raquo; был поставлен мировой рекорд &mdash; 197.011 км/ч.</p>
-        </div>
-        <h2 class="place__title">Карелия</h2>
-        <div class="place__link-area">
-          <p class="place__url-heading">URL</p>
-          <a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
-        </div>
-        <img class="place__image" src="./images/place-karelia.jpg" alt="карелия">
-        <div class="place__text">
-          <p class="place__paragraph">Сибирь заканчивается не&nbsp;на&nbsp;Урале, а&nbsp;в&nbsp;Карелии: образующая
-            тайгу сибирская
-            лиственница не&nbsp;растёт западнее Водлозера. Зато здесь она вымахивает на 30&nbsp;метров&nbsp;&mdash; леса
-            карельских
-            национальных парков из-за непроходимых болот никогда не&nbsp;знали топора. Некоторым соснам уже больше чем
-            полтысячелетия. Прикоснитесь к&nbsp;живому существу, видевшему солнце раньше, чем увидал его Иван Грозный.
-            В&nbsp;девственном лесу на&nbsp;сотню километров не встретишь тропы. А&nbsp;на&nbsp;редких тропинках деревья
-            в&nbsp;паре метров от&nbsp;земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
-        </div>
+        <article class="place__card">
+          <h2 class="place__title">Куршская коса</h2>
+          <div class="place__link-area">
+            <p class="place__url-heading">URL</p>
+            <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
+          </div>
+          <img class="place__image" src="./images/place-kosa.jpg" alt="куршская коса">
+          <div class="place__text">
+            <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта
+              &mdash;
+              спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой.
+              Уникальная природная зона на краю российского анклава.</p>
+            <p class="place__paragraph">На этом Калининградская область не заканчивается. Для&nbsp;путешественника
+              и&nbsp;исследователя там же по соседству &mdash; самая западная точка России, Балтийская коса, &mdash;
+              и&nbsp;немецкое
+              наследие
+              россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие
+              природы и запах стального, прохладного моря.</p>
+          </div>
+        </article>
+        <article class="place__card">
+          <h2 class="place__title">Кольский</h2>
+          <div class="place__link-area">
+            <p class="place__url-heading">URL</p>
+            <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National
+              Geographic</a>
+          </div>
+          <img class="place__image" src="./images/place-kolsky.jpg" alt="кольский полуостров">
+          <div class="place__text">
+            <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от
+              которой на юг &mdash;
+              тайга, а на север &mdash; Ледовитый океан, прикидывающийся Баренцевым морем.</p>
+            <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического
+              фестиваля
+              в Териберке. Возможно, слово &laquo;Хибины&raquo; не осталось под снегом школьных воспоминаний
+              об уроках географии.
+              Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной,
+              а&nbsp;от&nbsp;апатитов вас&nbsp;давно&nbsp;накрывает апатия. Но&nbsp;ваша мечта увидеть северное сияние
+              начинает сбываться с&nbsp;билетом
+              в Мурманск.</p>
+          </div>
+        </article>
+        <article class="place__card">
+          <h2 class="place__title">Алтай</h2>
+          <div class="place__link-area">
+            <p class="place__url-heading">URL</p>
+            <a class="place__link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">YouTube</a>
+          </div>
+          <img class="place__image" src="./images/place-altai.jpg" alt="алтай">
+          <div class="place__text">
+            <p class="place__paragraph">Алтай &mdash; одно из красивейших мест в России.
+              В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные
+              реки и
+              озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом
+              здешних мест &mdash;
+              горным воздухом.</p>
+            <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы
+              увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают
+              орлы, а
+              на равнинах пасутся косули. И знаменитые манулы &mdash; тоже обитатели Алтайского края.</p>
+          </div>
+        </article>
+        <article class="place__card">
+          <h2 class="place__title">Зимний Байкал</h2>
+          <div class="place__link-area">
+            <p class="place__url-heading">URL</p>
+            <a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
+          </div>
+          <img class="place__image" src="./images/place-winter-baikal.jpg" alt="зимний байкал">
+          <div class="place__text">
+            <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
+              в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в
+              России.</p>
+            <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по
+              скийорингу. Это такой вид спорта, когда лыжник привязывает себя
+              к мотоциклу, и тандем старается развить как можно б&oacute;льшую скорость на льду.
+              В марте 2019 года на
+              фестивале &laquo;Байкальская миля&raquo; был поставлен мировой рекорд &mdash; 197.011 км/ч.</p>
+          </div>
+        </article>
+        <article class="place__card">
+          <h2 class="place__title">Карелия</h2>
+          <div class="place__link-area">
+            <p class="place__url-heading">URL</p>
+            <a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
+          </div>
+          <img class="place__image" src="./images/place-karelia.jpg" alt="карелия">
+          <div class="place__text">
+            <p class="place__paragraph">Сибирь заканчивается не&nbsp;на&nbsp;Урале, а&nbsp;в&nbsp;Карелии: образующая
+              тайгу сибирская
+              лиственница не&nbsp;растёт западнее Водлозера. Зато здесь она вымахивает на 30&nbsp;метров&nbsp;&mdash;
+              леса
+              карельских
+              национальных парков из-за непроходимых болот никогда не&nbsp;знали топора. Некоторым соснам уже больше чем
+              полтысячелетия. Прикоснитесь к&nbsp;живому существу, видевшему солнце раньше, чем увидал его Иван Грозный.
+              В&nbsp;девственном лесу на&nbsp;сотню километров не встретишь тропы. А&nbsp;на&nbsp;редких тропинках
+              деревья
+              в&nbsp;паре метров от&nbsp;земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+          </div>
+        </article>
       </section>
       <section class="cover">
         <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link">
@@ -200,16 +206,14 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="footer__info">
-        <nav class="footer__links">
-          <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
-          <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
-          <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
-          <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
-          <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
-        </nav>
-        <p class="footer__copyright">&#xa9;2022. Вадим Коенен</p>
-      </div>
+      <nav class="footer__links">
+        <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
+        <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
+        <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
+        <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
+        <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
+      </nav>
+      <p class="footer__copyright">&#xa9;2022. Вадим Коенен</p>
     </footer>
   </div>
 </body>
